chore: well-known endpoint
